content/renderer/gpu/queue_message_swap_promise_unittest.cc
@@ -266,10 +266,11 @@ TEST_F(QueueMessageSwapPromiseTest, VisualStateSwapPromiseDidActivate) {
   promises_[2]->DidActivate();
   promises_[2]->DidNotSwap(cc::SwapPromise::SWAP_FAILS);
   messages.swap(NextSwapMessages());
-  EXPECT_EQ(1u, messages.size());
-  EXPECT_TRUE(ContainsMessage(messages, messages_[2]));
+  EXPECT_TRUE(messages.empty());
 
-  EXPECT_TRUE(DirectSendMessages().empty());
+  EXPECT_EQ(1u, DirectSendMessages().size());
+  EXPECT_TRUE(ContainsMessage(DirectSendMessages(), messages_[2]));
+
   EXPECT_TRUE(NextSwapMessages().empty());
   EXPECT_TRUE(frame_swap_message_queue_->Empty());
 }
